test/1.4/errors/T_ELAYOUT.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// not an error in DML 1.2

typedef layout "little-endian" {
    /// ERROR ELAYOUT
    long x;
    /// ERROR ELAYOUT
    size_t y;
} long_t;

/// ERROR ELAYOUT
extern typedef layout "little-endian" {
    uint8 x;
} y;
